side bar overlap fixed

--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -34,6 +34,7 @@
     padding: 5px 25px 10px;
     list-style: none;
     border-bottom: 1px solid rgb(196, 191, 191);
+    z-index: 9999;
 }
 
 .header__menu li {
